objects/Account.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Form_W8_Sponsored_FFI_Type__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. The beneficial owner is a sponsored Foreign Financial Institution (FII) without a GIIN number prior to 1/1/16 for purposes of IRS forms W-8 and certifies either (1) that it is an FFI only because it is an investment entity and has an agreement for sponsorship; or (2) that it is a controlled foreign corporation &apos;as defined by section 957(a).&apos;</description>
        <inlineHelpText>The beneficial owner is a sponsored Foreign Financial Institution (FII) without a GIIN number prior to 1/1/16 for purposes of IRS forms W-8</inlineHelpText>
        <label>Form W8 Sponsored FFI Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FFI Investment Entity</fullName>
                </value>
                <value>
                    <fullName>FFI Foreign Section 957a Corporation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Start_Up_Date__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It designates the date the start-up company was formed (or date of board resolution approving the new line of business).</description>
        <inlineHelpText>The date the start-up company was formed (or date of board resolution approving the new line of business).</inlineHelpText>
        <label>Form W8 Start Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Treaty_Limitation_Provision_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. If true, the owner is not an individual derives the income for which the treaty benefits are claimed and if applicable meets the requirements of the treaty provision dealing with limitation on benefits. It is form-specific for the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</description>
        <inlineHelpText>If true the owner is not an individual derives the income for which the treaty benefits are claimed.</inlineHelpText>
        <label>Form W8 Treaty Limitation Provision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W8_Treaty_Qualified_Resident_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. If true, the owner is not an individual claiming treaty benefits for dividends received from a foreign corporation or interest from a US trade or business of a foreign corporation and meets qualified resident status. It is form-specific for the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</description>
        <inlineHelpText>If true the owner is not an individual is claiming treaty benefits for dividends.</inlineHelpText>
        <label>Form W8 Treaty Qualified Resident Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W9_Seperat_TIN_Certification_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. If true, a separate TIN certification (i.e. a W-9) is desired.</description>
        <inlineHelpText>If true a separate TIN certification (i.e. a W-9) is desired.</inlineHelpText>
        <label>Form W9 Seperat TIN Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__GIIN__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. The GIIN of the disregarded entity account holder. (Global Intermediary Identification Number, a 19-digit number assigned to certain entities and used by a financial institution to identify itself to withholding agents and tax administrations for FATCA reporting.)</description>
        <inlineHelpText>The GIIN of the disregarded entity account holder. (Global Intermediary Identification Number.)</inlineHelpText>
        <label>GIIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Global_Cash_Flow__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It is used to demonstrate the owner&apos;s total monthly cash flow. Calculated automatically. Global CF = ((NOI) + (Spouse Salary if spouse is guarantor) + (Other Income)).</description>
        <label>Global Cash Flow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Governing_Law_State__c</fullName>
        <description>Governing Law State</description>
        <inlineHelpText>The governing law state of the trust.</inlineHelpText>
        <label>Governing Law State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>North Carolina</fullName>
                </value>
                <value>
                    <fullName>North Dakota</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Highest_Risk_Grade__c</fullName>
        <description>This field is optional. This field is manually populated. This field is used to store the highest decisioned risk grade of all loans where this relationship is an entity.</description>
        <inlineHelpText>This field is automatically filled with the highest risk grade loan associated to this account</inlineHelpText>
        <label>Risk Grade</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Indirect_Exposure__c</fullName>
        <description>This field is optional. It is automatically populated with a value based on the configuration of Relationship Statistics. This field is used to report Indirect Exposure to this Relationship or Account.</description>
        <inlineHelpText>Indirect Exposure</inlineHelpText>
        <label>Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manually populate this lookup field to define the Institution to which an account belongs.</description>
        <inlineHelpText>Manually populate this lookup field to define the Institution to which an account belongs.</inlineHelpText>
        <label>Institution</label>
        <referenceTo>LLC_BI__Institution__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interim_Statement__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify an end date of the most recent interim financial statement.</description>
        <label>Interim Statement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Individual__c</fullName>
        <description>This field is a formula field that assists in specifying if the account is an individual account.</description>
        <formula>IF(OR(ISPICKVAL(Type, &apos;Sole Proprietorship&apos;),ISPICKVAL(Type, &apos;Individual&apos;)), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Individual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Non_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users populate this optional boolean field on the relationship when the added entity is a third party. By default, this field is false.</description>
        <inlineHelpText>Select this checkbox when the added entity is a third-party entity.</inlineHelpText>
        <label>Is Non-Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Exposure_Calc_Date__c</fullName>
        <description>This date/time field automatically populates via the system. This field specifies the most recent date and time for a given exposure calculation. Default is null.</description>
        <label>Last Exposure Calculation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Review_Date__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It is the date of the last review.</description>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Site_Visit__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the date of last site visit to this Relationship or Account.</description>
        <label>Last Site Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Limited_Liability_Management_Type__c</fullName>
        <description>Users manually populate this optional text field. This field is used to specify whether the Limited Liability Company is operated by members or managers.</description>
        <label>Limited Liability Management Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member Managed</fullName>
                </value>
                <value>
                    <fullName>Manager Managed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Name__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field can be used to specify the loan name that is associated to the account.</description>
        <label>Loan Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Numbers__c</fullName>
        <description>This is a hidden field that stores the loan numbers that the relationship has. Used in some reports, alerts, etc. ( to be deprecated)</description>
        <label>-D Loan Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__MLA_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select or integration populates this optional boolean field to indicate if a consumer qualifies for the Military Lending Act when creating or updating a relationship.</description>
        <inlineHelpText>Users select or integration populates this optional boolean field to indicate if a consumer qualifies for the Military Lending Act when creating or updating a relationship.</inlineHelpText>
        <label>MLA Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Management_Experience__c</fullName>
        <description>This field is no longer used.</description>
        <inlineHelpText>Management Experience the individual has in their industry - expressed in Years.</inlineHelpText>
        <label>Management Experience</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__NaicsDesc__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. NaicsDesc Description is utilized in lieu of the Data.com field.</description>
        <inlineHelpText>NaicsDesc Description utilized in lieu of Data.com field</inlineHelpText>
        <label>NaicsDesc</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Naics_Code__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This text field is used to capture the NAICS code for the relationship.</description>
        <label>NAICS Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Next_Review_Date__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It designates the date of the next required review.</description>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Signers__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the number of authorized signers related to this account/relationship.</description>
        <label>Number of Signers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__NumberofLocations__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the number of locations for this Relationship or Account.</description>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Partnership_Type__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the partnership type for this account.</description>
        <label>Partnership Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>General Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Partnership (LLP)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Personal_Fin_Statements__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the date of most recent Personal Financial Statement on file.</description>
        <label>Personal Fin Statements</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Personal_Liquidity__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the owner&apos;s Personal and Business Liquidity as shown on most recent Personal Financial Statement.</description>
        <label>Pers. &amp; Bus. Liquidity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Personal_Tax_Return__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the date of the most recent Personal Tax Return (PTR).</description>
        <label>Personal Tax Return</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Phone_Number_Type__c</fullName>
        <description>This field is not required and is manually populated. This field defines the type of phone number entered in the &quot;Phone&quot; field on the Account object.</description>
        <label>Phone Number Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Pod__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the lending team associated with this Relationship or Account. The value provided must match one of the values in the POD list established for this organization.</description>
        <label>Pod</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dogwood</fullName>
                </value>
                <value>
                    <fullName>Cypress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Previous_Financial_Account_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. If true, the holder of the account will certify that they have previously had a transaction account at a financial institution within the last 12 months.</description>
        <inlineHelpText>If true the holder of the account will certify that they have previously had a transaction account at a financial institution within the last 12 months.</inlineHelpText>
        <label>Previous Financial Account Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Previous_Financial_Institution_Name__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It designates the name of the previous financial institution of the account holder.</description>
        <inlineHelpText>The name of the previous financial institution of the account holder.</inlineHelpText>
        <label>Previous Financial Institution Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed_Affiliated_Exposure__c</fullName>
        <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Proposed Affiliated Exposure to this Relationship or Account.</description>
        <label>Proposed Affiliated Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed_Direct_Exposure__c</fullName>
        <description>This field is optional. It is automatically populated with a value based on the configuration of Relationship Statistics. This field is used to report Proposed Direct Exposure to this Relationship or Account.</description>
        <inlineHelpText>Proposed Direct Exposure</inlineHelpText>
        <label>Proposed Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed_Indirect_Exposure__c</fullName>
        <description>This field is optional. It is automatically populated with a value based on the configuration of Relationship Statistics. This field is used to report Indirect Exposure to this Relationship or Account.</description>
        <inlineHelpText>Proposed Indirect Exposure</inlineHelpText>
        <label>Proposed Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reg_O_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is manually populated by a user. When the value of the field is set to true, the sharing setting of this Relationship is affected to restrict read/write access. This field is used to indicate that the relationship is subject to Regulation O standards. If Checked, the relationship is regulation O.</description>
        <inlineHelpText>This field should be checked if Regulation O applies to this Relationship</inlineHelpText>
        <label>Reg O Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Region__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to segment Relationships or Accounts. The value provided must match one of the values in the Region list established for this organization.</description>
        <inlineHelpText>Custom field to segment Accounts by Region</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US North</fullName>
                </value>
                <value>
                    <fullName>US East</fullName>
                </value>
                <value>
                    <fullName>US South</fullName>
                </value>
                <value>
                    <fullName>US West</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship_Class__c</fullName>
        <description>This is an optional field. It is manually populated. It indicates the rate class for a relationship and is used in tandem with the Rate_Class field on the Bill_Point object to determine pricing for a relationship for proforma calculations.</description>
        <label>Relationship Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                    <default>true</default>
                    <label>Gold</label>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship_Number__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It is used specifically for mass emails to customers so we can easily create isolated risks (for example, email relationships 0 - 100).</description>
        <label>Relationship Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Revenue_Growth__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to display the most recent year-over-year revenue growth as a percent.</description>
        <inlineHelpText>Expressed as a percent</inlineHelpText>
        <label>Revenue Growth %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Review_Frequency__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This indicates how often the product package review is required.</description>
        <label>Review Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Every 2 Months</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Review_Status__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It designates the status of the Account Review.</description>
        <inlineHelpText>Status of the Account Review</inlineHelpText>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Grade_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is populated automatically. It stores the last selected risk grade template choice when creating a risk rating review. When creating risk rating reviews from the selection page, this field is used to automatically populate the risk grade template picklist.</description>
        <label>Risk Grade Template</label>
        <referenceTo>LLC_BI__Risk_Grade_Template__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Rating_Review_Date_Decisioned__c</fullName>
        <description>The latest decision date from the related Risk Rating Reviews</description>
        <label>Risk Rating Review Date Decisioned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Rating_Review_Grade__c</fullName>
        <description>This field is optional. It is automatically populated with the value of the latest approved related risk rating review. When the latest decisioned risk rating review is rejected, the value of this field remains unchanged.</description>
        <label>Risk Rating Review Grade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Rating_Review_Status__c</fullName>
        <description>This field is optional. It is automatically populated with the approval or rejection status of the latest decisioned related risk rating review.</description>
        <label>Risk Rating Review Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SLAExpirationDate__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the expiration date for the SLA.</description>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SLASerialNumber__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the Serial number for the SLA.</description>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SLA__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to select SLA level for this Relationship or Account, for example, Gold, Silver, or Bronze. The value provided must match one of the values in the SLA list established for this organization.</description>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                    <color>#AFCADF</color>
                    <label>Platinum</label>
                </value>
                <value>
                    <fullName>Gold</fullName>
                    <color>#FFCC33</color>
                    <label>Gold</label>
                </value>
                <value>
                    <fullName>Silver</fullName>
                    <color>#DDDDDD</color>
                    <label>Silver</label>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                    <color>#A845DC</color>
                    <label>Bronze</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Shipping_Address_County__c</fullName>
        <description>Users populate this optional text field with the county name for the shipping address.</description>
        <label>Shipping Address County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__State_of_Incorporation__c</fullName>
        <description>This is an optional field. This field will allow the user to select the state of incorporation. This field will be used to support the document preparation integrations.</description>
        <label>State of Incorporation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Statement_From_Date__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used with Automated Financials System. It designates the beginning of the date range the BOT will request from the Relationship being serviced.</description>
        <inlineHelpText>The beginning of the date range in which the BOT will request from the relationship being serviced</inlineHelpText>
        <label>Statement From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Statement_To_Date__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used with Automated Financials System. It designates the ending of the date range the BOT will request from the Relationship being serviced.</description>
        <inlineHelpText>The end of the date range in which the BOT will request from the relationship being serviced</inlineHelpText>
        <label>Statement To Date</label>
        <type>Date</type>
    </fields>
</CustomObject>